--- a/src/stylesheets/layout.less
+++ b/src/stylesheets/layout.less
@@ -57,7 +57,7 @@ code {
   -khtml-border-radius: 3px;
   border-radius: 3px;
   font-family: Courier,monospace;
-  overflow: auto;
+  overflow: scroll;
   color: green;
 }
 
@@ -83,7 +83,7 @@ h1 {
 }
 
 h2 {
-  margin-top: 10px;
+  margin-top: 60px;
   margin-bottom: 25px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
