--- a/src/index.jade
+++ b/src/index.jade
@@ -7,6 +7,7 @@ head
   title ACME Documentation
   script(src="./pakmanaged.js")
   link(rel="stylesheet", type="text/css", href="style.css")
+  link(rel="stylesheet", type="text/css", media="print", href="print.css")
 
 body
   #header
