Made some more printer style tweaks. Hope it works... I can not test on this branch :(

--- a/src/stylesheets/printlayout.less
+++ b/src/stylesheets/printlayout.less
@@ -35,7 +35,7 @@ h2 {
 
 .page_head {
   color: #000;
-  margin-left: 0;
+  margin-left: 1em;
 }
 
 #header {
@@ -77,4 +77,13 @@ h2 {
 
 .doc_columns {
   width: 90%;
+}
+
+a:hover, a:visited, a:link, a:active {
+  color: #000;
+  text-decoration: underline;
+}
+
+#footie_pajamas {
+  color: #000;
 }
